# TigerCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.hh  ast_interface.hh  ast_node.hh  ast_translate.cc  bison_header_info.hh  buffman.cc  frame.hh  frame_stack.hh  generate.hh  hmmm  irt.hh  lex.yy.c  many_to_one.hh  mips_frame.cc  mips_frame.cpp  mips_generate.cc  mips_munch.cc  parse_and_print.cc  parse_err.cpp  semantic_check.cc  semantic_check.hh  symbol_table.cc  symbol_table.hh  tc.cc  temp.cc  temp.hh  test_function.hh  test_lexer.cc  test_parser.cc  test_semantics.cc  test_translate.cc  tiger.l  tiger.y  tokens.hh
ast_specifics/: dec_list_impl.cc  decs_ast.hh  expr_ast.hh  lval_ast.hh  types_ast.hh
helper_files/: func_header.hh  list_helper.hh  many_to_one.hh  record_utils.hh  source_loc.hh  type_assertion.hh  type_expr.hh  unresolved_type_info.hh
language_examples/: arr.t  arr.t.cmp  bad_structual_type.t  bad_type_scope.t  cyclic_type_defs.t  decl_mismatch.t  failing_examples.t  func_args1.t  func_call.t  func_call.t.cmp  good_struct_ty.t  if_statements.t  loop.t  loop.t.cmp  merge_example.t  multiply_defined_ids1.t  multiply_defined_ids2.t  mutu_type_def.t  mutual_recursion_func1.t  nested_function1.t  nested_function2.t  nested_function3.t  nested_function4.t  nil_record.t  readme_example.t  record.t  record.t.cmp  recursive_func1.t  recursive_func2.t  sequences.t  sequences.t.cmp  simple_call.t  two_queens_example.t  type_mismatch2.t  type_mismatch3.t  type_mismatch4.t  type_mismatch5.t  type_missmatch6.t  type_mistmatch1.t
old_lexer_hw5/: Makefile  test_lexer.cc  tiger.l  tokens.hh
old_parser/: README.md
playground/: calc.l
playground/cppcalc/: Makefile  calc.cc  calc.l  calc.y
playground/new_playground/: Makefile  tiger.l  tiger.y
playground/old_playground/: example.tiger  snazzle.l  test_file.txt  wc.l
semantic_tiger_examples/: two_namespaces_required.t
